--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "nexigo24-b281b"
-  }
+    "default": "nexigo24-b281b",
+    "staging": "pro-nex"
+  },
+  "targets": {},
+  "etags": {}
 }
