--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "nexigo-re",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.13",
+    "@mui/material": "^5.16.7",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.162.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.17",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
